--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "setprototypeof": "^1.2.0",
     "shell-quote": "^1.8.0",
     "side-channel": "^1.0.4",
+    "simple-oauth2": "^5.0.0",
     "simple-update-notifier": "^1.1.0",
     "spawn-command": "^0.0.2-1",
     "statuses": "^2.0.1",
@@ -108,6 +109,7 @@
     "toidentifier": "^1.0.1",
     "touch": "^3.1.0",
     "tree-kill": "^1.2.2",
+    "tsc": "^2.0.4",
     "tslib": "^2.5.0",
     "type-is": "^1.6.18",
     "undefsafe": "^2.0.5",
@@ -131,8 +133,9 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
+    "@types/simple-oauth2": "^5.0.2",
     "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.21",
     "typescript": "^4.9.5"
   }
 }
